Java/GestVendas/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\Mimi\Desktop\LI3\Java\GestVendas
-d
C:\Users\Mimi\Desktop\LI3\Java\GestVendas\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Mimi\Desktop\LI3\Java\GestVendas\GestVendasModel.java
<---- end of javadoc command ---->
Loading source file C:\Users\Mimi\Desktop\LI3\Java\GestVendas\GestVendasModel.java...
C:\Users\Mimi\Desktop\LI3\Java\GestVendas\GestVendasModel.java:180: error: not a statement
                   v++;z
                       ^
C:\Users\Mimi\Desktop\LI3\Java\GestVendas\GestVendasModel.java:180: error: ';' expected
                   v++;z
                        ^
2 errors
